objects/student1__c.object
<CustomObject>
    <fields>
        <fullName>After_percentage__c</fullName>
        <label>After percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_percentage_fee__c</fullName>
        <formula>Total_fees_paid__c  -  offer_percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After percentage fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>18</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Coaching1__c</fullName>
        <label>Coaching1</label>
        <referenceTo>Coaching__c</referenceTo>
        <relationshipLabel>students1 (Coaching1)</relationshipLabel>
        <relationshipName>students11</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching</label>
        <referenceTo>Coaching__c</referenceTo>
        <relationshipLabel>students1</relationshipLabel>
        <relationshipName>students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_poor_student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is poor student?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_fees__c</fullName>
        <formula>how_much__c  -  Total_fees_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_Approval__c</fullName>
        <label>Student Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>first Approval</fullName>
                </value>
                <value>
                    <fullName>Second Approval</fullName>
                </value>
                <value>
                    <fullName>Third Approval</fullName>
                </value>
                <value>
                    <fullName>Finally Approved</fullName>
                </value>
                <value>
                    <fullName>Finally Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timing</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Timing__c.Coaching__c</field>
                <operation>equals</operation>
                <valueField>$Source.Coaching1__c</valueField>
            </filterItems>
            <filterItems>
                <field>Timing__c.Coaching__c</field>
                <operation>equals</operation>
                <valueField>$Source.Coaching__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Timing__c</referenceTo>
        <relationshipLabel>students1</relationshipLabel>
        <relationshipName>students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_fees_paid__c</fullName>
        <label>Total fees paid?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>auto_roll_call__c</fullName>
        <displayFormat>sr-{000}</displayFormat>
        <label>auto roll call</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>complete_details__c</fullName>
        <label>complete details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aus</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                    <default>true</default>
                    <label>IND</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country_entry__c</fullName>
        <formula>Name  +  Coaching__c  + TEXT( country__c )  +  TEXT( state__c )</formula>
        <label>country entry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>courses__c</fullName>
        <label>courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SAAS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>salesforce</fullName>
                </value>
                <value>
                    <fullName>vb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>current_location__c</fullName>
        <label>current location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>email_address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>enter compulsary</inlineHelpText>
        <label>email address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fee_paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>fee paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>full_paid1__c</fullName>
        <formula>IF( Pending_fees__c  &gt;=0, true, false)</formula>
        <label>full paid1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>how_much__c</fullName>
        <label>how much</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>offer_percentage__c</fullName>
        <label>offer percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone_no__c</fullName>
        <inlineHelpText>enter compulsary</inlineHelpText>
        <label>phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>refer_url__c</fullName>
        <label>refer url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ap</fullName>
                </value>
                <value>
                    <fullName>chennai</fullName>
                </value>
                <value>
                    <fullName>delhi</fullName>
                </value>
                <value>
                    <fullName>ka</fullName>
                </value>
                <value>
                    <fullName>telangana</fullName>
                </value>
                <value>
                    <fullName>Washington DC</fullName>
                </value>
                <value>
                    <fullName>New jersey</fullName>
                </value>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>Los angels</fullName>
                </value>
                <value>
                    <fullName>Wellington</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stu_address__c</fullName>
        <label>stu address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>student_address__c</fullName>
        <label>student address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>student_number__c</fullName>
        <label>student number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>temp_address__c</fullName>
        <inlineHelpText>cumpalsary</inlineHelpText>
        <label>temp address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>time_and_stu__c</fullName>
        <formula>Text(Timing__r.Staff_Name__c)</formula>
        <label>time and stu</label>
        <type>Text</type>
    </fields>
    <label>student1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>India_View</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>country__c</columns>
        <columns>courses__c</columns>
        <columns>Coaching1__c</columns>
        <columns>fee_paid__c</columns>
        <columns>how_much__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>country__c</field>
            <operation>equals</operation>
            <value>IND</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>student1__c.India_Recordtype_Layout1</value>
        </filters>
        <label>India View</label>
    </listViews>
    <nameField>
        <label>student1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students1</pluralLabel>
    <recordTypes>
        <fullName>India_Recordtype_Layout1</fullName>
        <active>true</active>
        <label>India Recordtype Layout1</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Recordtype_Layout1</fullName>
        <active>true</active>
        <label>UK Recordtype Layout1</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_student_Record_Type1</fullName>
        <active>true</active>
        <label>USA student Record Type1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>valid_T_and_F</fullName>
        <active>true</active>
        <errorConditionFormula>IF(how_much__c &gt;=0  &amp;&amp;  fee_paid__c ==false, true, false)</errorConditionFormula>
        <errorDisplayField>fee_paid__c</errorDisplayField>
        <errorMessage>Check the value</errorMessage>
    </validationRules>
</CustomObject>